Fixed alignment with navbar

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -412,4 +412,7 @@ table {
   .desktop-navbar a:hover {
     color: rgba(212, 20, 67, 1);
   }
+  .logo-menu-container {
+    width:70%;
+  }
 }
